--- a/index.html
+++ b/index.html
@@ -387,6 +387,21 @@
                 class="text-blue-500 mt-4 inline-block">View Project</a>
             </div>
           </div>
+                    <!-- Project 2 -->
+          <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+            <a href="https://web-builder-assignment-phi.vercel.app/" target="_blank">
+              <img src="../images/realstateproj.png" alt="Capstone Project"
+                class="w-full h-auto object-cover transition-transform duration-300 transform hover:scale-105">
+            </a>
+            <div class="p-4">
+              <br>
+              <br>
+              <h3 class="text-xl font-semibold text-gray-900">Real State - Single Page</h3>
+              <p class="text-gray-600 mt-2">The homepage gives visitors a quick overview of your real estate brand, showcasing featured properties, services, and an easy way to connect.</p>
+              <a href="https://web-builder-assignment-phi.vercel.app/" target="_blank"
+                class="text-blue-500 mt-4 inline-block">View Project</a>
+            </div>
+          </div>
         </div>
       </div>
 
